--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       background: #ffc0cb;
       font-family: 'Segoe UI', sans-serif;
-      overflow-x: hidden;
+      overflow: hidden;
     }
 
     .start-container {
@@ -23,8 +23,8 @@
 
     .envelope {
       position: relative;
-      width: 30vw;
-      height: 22vw;
+      width: 140px;
+      height: 100px;
       margin: 0 auto;
       cursor: pointer;
       transform-style: preserve-3d;
@@ -32,8 +32,8 @@
     }
 
     .envelope .flap {
-      width: 30vw;
-      height: 11vw;
+      width: 140px;
+      height: 50px;
       background: #e91e63;
       position: absolute;
       top: 0;
@@ -44,12 +44,12 @@
     }
 
     .envelope .body {
-      width: 30vw;
-      height: 22vw;
+      width: 140px;
+      height: 100px;
       background: white;
       text-align: center;
-      font-size: 6vw;
-      line-height: 22vw;
+      font-size: 48px;
+      line-height: 100px;
       border: 3px solid #e91e63;
       border-radius: 6px;
       position: relative;
@@ -57,15 +57,15 @@
     }
 
     .click-text {
-      font-size: 4vw;
-      margin-top: 2vw;
+      font-size: 18px;
+      margin-top: 12px;
       color: #b30047;
       font-weight: bold;
     }
 
     .message-box {
       position: absolute;
-      top: 5vw;
+      top: 30px;
       width: 100%;
       text-align: center;
       z-index: 10;
@@ -73,26 +73,26 @@
     }
 
     .message-box h1 {
-      font-size: 5vw;
+      font-size: 2.5vw;
       color: #e91e63;
-      margin-bottom: 2vw;
+      margin-bottom: 10px;
       text-shadow: 1px 1px 3px white;
     }
 
     .typewriter {
-      font-size: 3.5vw;
+      font-size: 1.2vw;
       color: white;
       background: rgba(255, 105, 180, 0.5);
-      padding: 2vw 4vw;
+      padding: 1vw 2vw;
       border-radius: 12px;
       display: inline-block;
-      margin-top: 1vw;
+      margin-top: 10px;
     }
 
     .typewriter.no-bg {
       background: none;
       font-weight: bold;
-      font-size: 3.5vw;
+      font-size: 1.4vw;
       color: #e91e63;
     }
 
@@ -100,8 +100,8 @@
       position: absolute;
       top: 50%;
       left: 50%;
-      width: 25vw;
-      height: 25vw;
+      width: 13vw;
+      height: 13vw;
       transform: translate(-50%, -50%);
       border-radius: 50%;
       object-fit: cover;
@@ -112,6 +112,8 @@
 
     .orbit-img {
       position: absolute;
+      width: 8vw;
+      height: 8vw;
       border-radius: 10px;
       object-fit: cover;
       opacity: 0;
@@ -120,7 +122,7 @@
 
     .second-message {
       position: fixed;
-      bottom: 4vw;
+      bottom: 30px;
       width: 100%;
       text-align: center;
       z-index: 10;
@@ -131,31 +133,32 @@
       to { opacity: 1; }
     }
 
-    @media (min-width: 768px) {
+    @media (max-width: 768px) {
       .message-box h1 {
-        font-size: 28px;
+        font-size: 6vw;
       }
-
       .typewriter, .typewriter.no-bg {
-        font-size: 20px;
+        font-size: 4vw;
+        padding: 2vw;
       }
-
-      .click-text {
-        font-size: 18px;
+      .center-img {
+        width: 40vw;
+        height: 40vw;
+      }
+      .orbit-img {
+        width: 25vw;
+        height: 25vw;
       }
     }
   </style>
 </head>
 <body>
-  <!-- Nhạc nền -->
   <audio id="bgm" loop>
     <source src="music/birthday.mp3" type="audio/mpeg" />
   </audio>
 
-  <!-- Âm thanh gõ phím -->
   <audio id="type-sound" src="sounds/keypress.mp3" preload="auto"></audio>
 
-  <!-- Hộp thư mở đầu -->
   <div class="start-container" onclick="openEnvelope(this)">
     <div class="envelope">
       <div class="flap"></div>
@@ -164,7 +167,6 @@
     <p class="click-text">Click để mở thư chúc mừng</p>
   </div>
 
-  <!-- Lời chúc đầu -->
   <div class="message-box">
     <h1>🎉 Chúc mừng sinh nhật vợ yêu của anh! 🎂</h1>
     <div class="typewriter no-bg">
@@ -172,10 +174,8 @@
     </div>
   </div>
 
-  <!-- Ảnh chính giữa -->
   <img src="images/happywife.jpg" class="center-img" alt="Vợ yêu" />
 
-  <!-- Lời chúc thứ hai -->
   <div class="second-message">
     <div class="typewriter">
       <p id="typing-text-2"></p>
@@ -185,7 +185,6 @@
   <script>
     const text = "Hôm nay là ngày đặc biệt, ngày em đến với thế giới này để rồi trở thành thế giới của anh. Cảm ơn em vì đã luôn bên anh. Yêu em rất nhiều! 💕";
     const text2 = "Chúc em một tuổi mới ngập tràn hạnh phúc, yêu thương và luôn mỉm cười thật tươi mỗi ngày! Hãy cùng nhau cố gắng hoàn thiện bản thân thành phiên bản tốt hơn mỗi ngày để cùng đạt được những mục tiêu phía trước nhé vợ 💖";
-
     const target = document.getElementById("typing-text");
     const target2 = document.getElementById("typing-text-2");
     const typeSound = document.getElementById("type-sound");
@@ -227,24 +226,21 @@
       const images = ['img1.jpg','img2.jpg','img3.jpg','img4.jpg','img5.jpg','img6.jpg','img7.jpg','img8.jpg'];
       const centerX = window.innerWidth / 2;
       const centerY = window.innerHeight / 2;
-      const radius = window.innerWidth * 0.25;
-      const orbitSize = window.innerWidth * 0.075;
+      const radius = Math.min(window.innerWidth, window.innerHeight) * 0.2; // giảm bán kính để ảnh nhỏ gần hơn
 
       images.forEach((filename, i) => {
         const angle = (2 * Math.PI / images.length) * i;
-        const x = centerX + radius * Math.cos(angle) - orbitSize;
-        const y = centerY + radius * Math.sin(angle) - orbitSize;
+        const x = centerX + radius * Math.cos(angle) - (window.innerWidth * 0.04);
+        const y = centerY + radius * Math.sin(angle) - (window.innerWidth * 0.04);
         const img = document.createElement('img');
         img.src = 'images/' + filename;
         img.className = 'orbit-img';
         img.style.left = `${x}px`;
         img.style.top = `${y}px`;
-        img.style.width = img.style.height = `${orbitSize * 2}px`;
         img.style.animationDelay = `${i * 1}s`;
         document.body.appendChild(img);
       });
 
-      // Hiện lời chúc thứ hai
       setTimeout(() => {
         document.querySelector('.second-message').style.display = 'block';
         typeSound.play().catch(() => {});
